fix: contrast ratio in IDE themes.
For documentation's color with Vanilla / IntelliJ themes.

--- a/src/styles/ide/_intellij.scss
+++ b/src/styles/ide/_intellij.scss
@@ -9,7 +9,7 @@
     light: (
       background: white,
 
-      documentation: #8C8C8C,
+      documentation: #6D6D6D,
       text: black,
       comma: black,
       parenthesis: black,
