--- a/src/styles/ide/_vanilla.scss
+++ b/src/styles/ide/_vanilla.scss
@@ -9,7 +9,7 @@
     light: (
       background: #F3F4F6,
 
-      documentation: #008000,
+      documentation: #6D6D6D,
       text: black,
       comma: black,
       parenthesis: black,
@@ -24,7 +24,7 @@
       background: #2B2B2B,
       toolbar: #161B22,
 
-      documentation: #008000,
+      documentation: #629755,
       text: #C8C8C8,
       comma: #C8C8C8,
       parenthesis: #C8C8C8,
